--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -2,23 +2,26 @@ FROM snowdreamtech/debian:12.8.0
 
 # OCI annotations to image
 LABEL org.opencontainers.image.authors="Snowdream Tech" \
-    org.opencontainers.image.title="Base Image Based On Debian" \
-    org.opencontainers.image.description="Docker Images for Base on Debian. (i386,amd64,arm32v5,arm32v7,arm64,mips64le,ppc64le,s390x)" \
-    org.opencontainers.image.documentation="https://hub.docker.com/r/snowdreamtech/base" \
-    org.opencontainers.image.base.name="snowdreamtech/base:debian" \
+    org.opencontainers.image.title="Go Image Based On Debian" \
+    org.opencontainers.image.description="Docker Images for Go on Debian. (i386, amd64, arm32v6, arm32v7, arm64, ppc64le,riscv64, s390x)" \
+    org.opencontainers.image.documentation="https://hub.docker.com/r/snowdreamtech/go" \
+    org.opencontainers.image.base.name="snowdreamtech/go:debian" \
     org.opencontainers.image.licenses="MIT" \
-    org.opencontainers.image.source="https://github.com/snowdreamtech/base" \
+    org.opencontainers.image.source="https://github.com/snowdreamtech/go" \
     org.opencontainers.image.vendor="Snowdream Tech" \
-    org.opencontainers.image.version="12.8" \
-    org.opencontainers.image.url="https://github.com/snowdreamtech/base"
+    org.opencontainers.image.version="1.19.8" \
+    org.opencontainers.image.url="https://github.com/snowdreamtech/go"
 
-# keep the docker container running
-ENV KEEPALIVE=1
+ENV GOLANG_VERSION=1.23.3-2~bpo12+1 \ 
+    GOROOT=/usr/lib/go-1.23 \
+    PATH=$PATH:/usr/lib/go-1.23/bin \
+    GO111MODULE=on \
+    GOPROXY=https://proxy.golang.org,https://goproxy.io,direct
 
 ARG GID=1000 \
     UID=1000  \
-    USER=base \
-    WORKDIR=/home/base
+    USER=go \
+    WORKDIR=/home/go
 
 # Create a user with UID and GID
 RUN set -eux \
@@ -36,7 +39,8 @@ RUN set -eux \
 RUN set -eux \
     && apt-get -qqy update  \
     && apt-get -qqy install --no-install-recommends \ 
-    vim \
+    -t bookworm-backports \
+    golang-1.23=${GOLANG_VERSION} \
     && apt-get -qqy --purge autoremove \
     && apt-get -qqy clean \
     && rm -rf /var/lib/apt/lists/* \
