chore: enhance Dockerfiles for alpine and debian with GOSUMDB and CGO_ENABLED settings

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -16,7 +16,9 @@ ENV GOLANG_VERSION=1.23.7-r0 \
     GOROOT=/usr/lib/go \
     PATH=$PATH:/usr/lib/go/bin \
     GO111MODULE=on \
-    GOPROXY=https://proxy.golang.org,direct
+    GOPROXY=https://proxy.golang.org,direct \
+    GOSUMDB=sum.golang.org \
+    CGO_ENABLED=0 
 
 ARG GID=1000 \
     UID=1000  \
