--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -111,9 +111,12 @@ jobs:
         uses: docker/metadata-action@v5.9.0
         with:
           images: |
-            name=snowdreamtech/base,enable=true
-            name=ghcr.io/snowdreamtech/base,enable=true
-            name=quay.io/snowdreamtech/base,enable=true
+            name=snowdreamtech/go,enable=true
+            name=snowdreamtech/golang,enable=true
+            name=ghcr.io/snowdreamtech/go,enable=true
+            name=ghcr.io/snowdreamtech/golang,enable=true
+            name=quay.io/snowdreamtech/go,enable=true
+            name=quay.io/snowdreamtech/golang,enable=true
           flavor: |
             latest=false  
             prefix=
